Add backgroud img

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,8 @@
 - content_for :context do
   .text-container
     %p
-      Hi! My name is Lujia Zhang
-      I live and work in San Francisco as a software engineer at 
+      Hi there! I'm Lujia Zhang, currently live and work in San Francisco as a software engineer at 
       =link_to "Moovweb", "http://moovweb.com", target: '_blank'
       \.
     %p
-      I had worked on our improve console for a year, which is a RoR application. Currently I'm learning operation stuff, working on aws autoscaling. 
+      I works on improving and maintaining our console, the control cernter for our platform developers. I'm also learning and working on ops stuff, working on aws autoscaling now. 
