--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,10 +8,10 @@
   %h1.main-heading
     Lujia Zhang
     %span.blinker
-  %h2.sub-heading Developer | Photographer | Coffee Addict.
+  %h2.sub-heading Engineer | Photographer | Coffee Addict.
   %nav.w-nav-menu.nav-menu.container{:role => "navigation"}
     %a.w-nav-link.nav-link.w--current{:href => "/", :style => "max-width: 940px;"} About me
-    %a.w-nav-link.nav-link{:href => "/about", :style => "max-width: 940px;"} Profile
-    %a.w-nav-link.nav-link{:href => "/about", :style => "max-width: 940px;"} Resume
-    %a.w-nav-link.nav-link{:href => "/about", :style => "max-width: 940px;"} Skills
+    %a.w-nav-link.nav-link{:href => "/profile", :style => "max-width: 940px;"} Profile
+    %a.w-nav-link.nav-link{:href => "/resume", :style => "max-width: 940px;"} Resume
+    %a.w-nav-link.nav-link{:href => "/skills", :style => "max-width: 940px;"} Skills
     %a.w-nav-link.nav-link{:href => "/contact", :style => "max-width: 940px;"} Contact
