--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -13,6 +13,8 @@ label {
   font-size: 16px;
   font-weight: 300;
   width: 100px;
+  vertical-align: top;
+  text-align: right;
 }
 
 input, textarea {
@@ -21,10 +23,12 @@ input, textarea {
 
 input {
   height: 40px;
+  vertical-align: bottom;
 }
 
 textarea {
   min-height: 160px;
+  margin-top: 20px;
 }
 
 .button {
