--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,8 +1,22 @@
 - content_for :context do
   .text-container
     %p
-      Hi there! I'm Lujia Zhang, currently live and work in San Francisco as a software engineer at 
+      Hi there! I'm Lujia Zhang, a full stack developer interested in cutting edge technologies. Currently I work at 
       =link_to "Moovweb", "http://moovweb.com", target: '_blank'
-      \.
+      as a platform engineer.
     %p
-      I works on improving and maintaining our console, the control cernter for our platform developers. I'm also learning and working on ops stuff, working on aws autoscaling now. 
+      I'm the lead developer of 
+      =link_to "Moovweb Control Center", "console.moovweb.com", target: '_blank'
+      \- web console for project deployment and management. Also, I maintain and update the SSL Certificate manager's APIs and a rails project which uses Amazon APIs to access our AWS infrastructure.
+
+      Currently, I am working with/on APIs (Ruby) to communicate with Amazon AWS as well as learning Puppet to automate and manage servers.
+
+    %p
+      I connect with people on both
+      =link_to "LinkedIn", "https://www.linkedin.com/in/lujia-zhang-36bba175", target: '_blank'
+      and
+      =link_to "Facebook", "https://www.facebook.com/lujia.zhang.58", target: '_blank'
+      \.
+      I post on 
+      =link_to "500px", "500px.com/sayitmemory", target: '_blank'
+      to brush up my photography skills, and consume engineering & design-related content mostly on Medium.
