--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -1,1 +1,32 @@
 WHAT I'M DOING
+%container
+  %p
+    Enable Elastic Search in control center
+    make requests to our ealstic search 
+    cache the results to make it faster
+  %p
+    Add DNS Setup Check for clients' hosts
+    Add a daily dns status check worker 
+
+  %p
+    Send events to Mixpanel to track the usage
+
+  %p
+    Upgrade Control Center Rails version from 4.0 to 4.2.5.1
+
+  %p
+    Improve the SSL Flow
+    Work with our designer for UX redesign and implement the style changes
+    Realtime check for the uploaded certs and intermediate certs
+    Refactor ssl status fetch logic to avoid worker timeout 
+
+  %p
+    Add Marketing-Controlled Content
+
+  %p
+    Rake tasks to clean the database
+
+  %p 
+
+
+
